# chorus

./: .gitignore  CLAUDE.md  LICENSE  README.md  package.json
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json  tauri.qa.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs  migrations.rs
src/core/chorus/: Models.ts  OpenAICompletionsAPIUtils.ts  simpleLLM.ts
src/core/chorus/ModelProviders/: ProviderOpenAICompatible.ts
src/core/chorus/api/: AppMetadataAPI.ts  ChatAPI.ts  JudgeAPI.ts  MessageAPI.ts  ModelsAPI.ts  ProjectAPI.ts
src/core/chorus/gc-prototype/: APIGC.ts  PromptsGC.ts  UtilsGC.ts
src/core/chorus/prompts/: prompts.ts
src/core/chorus/toolsets/: terminal.ts
src/core/infra/: JudgeStore.ts
src/core/utilities/: ProxyUtils.ts  Settings.ts
src/ui/: App.css  App.tsx  main.tsx
src/ui/components/: ApiKeysForm.tsx  AppSidebar.tsx  ChatInput.tsx  ChatSuggestions.tsx  EmptyState.tsx  EnhanceButton.tsx  ImportChatDialog.tsx  JudgeDialog.tsx  ManageModelsBox.tsx  MultiChat.tsx  NewPrompt.tsx  QuickChatModelSelector.tsx  Settings.tsx  Snowfall.tsx
src/ui/components/gc-prototype/: CollapsibleMessage.tsx  GroupChat.tsx
src/ui/components/renderers/: CodeBlock.tsx
src/ui/components/ui/: ErrorBoundary.tsx  provider-logo.tsx
