[package]
name = "chorus"
version = "0.1.2"
description = "Talk to lots of AIs"
authors = ["you"]
edition = "2021"
default-run = "chorus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "melty_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = [ "protocol-asset", "macos-private-api", "tray-icon", "image-png", "devtools"] }
tauri-plugin-shell = "~2.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "~2.0.2"
tauri-plugin-notification = "2.0.0"
tauri-plugin-fs = { version = "~2.2.0", features = ["watch"] }
tauri-plugin-store = "2.1.0"
tauri-plugin-process = "~2.2.1"
tauri-plugin-http = "~2.4.3"
tauri-plugin-sql = { version = "~2.2.0", features = ["sqlite"] }
reqwest = { version = "0.12", features = ["json"] }
tauri-plugin-stronghold = "~2.2.0"
tauri-plugin-deep-link = "~2.2.0"
thiserror = "1.0.63"
screenshots = "0.8.5"
base64 = "0.21.7"
image = "0.24.9"
window-vibrancy = "0.5.2"
tauri-plugin-opener = "~2.2.6"
tauri-plugin-os = "~2.2.1"
tauri-plugin-clipboard-manager = "~2.2.1"
tauri-plugin-macos-permissions = "~2.1.1"
chrono = "0.4" # For billing info
sha2 = "0.10"  # For billing info
hex = "0.4"    # For billing info
obfstr = "0.4" # For billing info
hmac = "0.12"  # For HMAC in billing info
tauri-plugin-devtools = "2.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2.7"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
monitor = { git = "https://github.com/ahkohd/tauri-toolkit", branch = "v2" }

[[bin]]
name = "generate_schema"
path = "src/bin/generate_schema.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(feature, values(\"cargo-clippy\"))"] }

[dependencies.rusqlite]
version = "0.32"
features = ["bundled"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "~2.2.0"
